<resources>
    <string name="app_name">Movie Watchlist</string>
    <string name="add_movie">Add Movie</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="rating">Rating</string>
    <string name="runtime_minutes">Runtime (minutes)</string>
    <string name="review">Review</string>
    <string name="synopsis">Synopsis</string>
    <string name="save">Save</string>
    <string name="empty_movies">No movies yet</string>
    <string name="search_movies_hint">Search movies</string>
    <string name="search_local_hint">Search my movies</string>
    <string name="search_tmdb_hint">Search new movies (TMDB)</string>
    <string name="no_results">No results</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this movie?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>